// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`1- default state 1`] = `null`;

exports[`2- loginAct 1`] = `
Object {
  "data": Object {
    "name": "foo",
  },
  "points": Object {
    "points": "0.000",
    "uPoints": "0.000",
  },
  "username": "foo",
}
`;

exports[`3- updateAct 1`] = `
Object {
  "data": Object {
    "__loaded": true,
    "name": "foo",
    "post_count": 10,
  },
  "points": Object {
    "points": "0.100",
    "uPoints": "0.200",
  },
  "username": "foo",
}
`;
